# ncsfardevice

./: .gitignore  CODEOWNERS  README.md
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  debug.conf  pm_static_farlock3_nrf52840.yml  prj.conf  sample.yaml  sysbuild.conf  sysbuild_internal.conf
app/boards/: farlock.overlay  farlock3.overlay  nrf52840dk_nrf52840.overlay
app/src/: farlock.zap  main.c  main.c.old  main.cpp  nfc.c  nfc.h  usb.c  usb.h
app/src/default_zap/: farlock3.zap
app/src/default_zap/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
app/src/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
app/sysbuild/mcuboot/boards/: farlock.conf
boards/frazieje/farlock/: Kconfig  Kconfig.farlock  README.md  board.yml  farlock-pinctrl.dtsi  farlock.dts  farlock.yaml
boards/frazieje/farlock3/: Kconfig.defconfig  Kconfig.farlock3  README.md  board.cmake  board.yml  farlock3-pinctrl.dtsi  farlock3.dts  farlock3.yaml  farlock3_defconfig
drivers/: Kconfig
drivers/blink/: gpio_led.c
drivers/far_nfc/: CMakeLists.txt  Kconfig  Kconfig.far_nfc_t4t
include/app/drivers/: far_nfc.h
tests/lib/custom/: testcase.yaml
